--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"/>
   <title>Portfolio Page</title>
 </head>
 <body>
@@ -18,18 +18,18 @@
   <section>
     <h2>Things I Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Watermelon</li>
+      <li>Fried Chicken</li>
+      <li>Kool Aid</li>
     </ul>
   </section>
 
   <section>
     <h2>Things I Don't Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Fish</li>
+      <li>Heights</li>
+      <li>Wind</li>
     </ul>
   </section>
 </body>
